--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
         </div>
 
-    <div class="content-section-b">
+    <!-- <div class="content-section-b">
 
         <div class="container">
 
@@ -141,7 +141,7 @@
 
         </div>
 
-    </div>
+    </div> -->
 
     <!-- <div class="content-section-a">
 
