--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="custom.css" charset="utf-8">
+    <link rel="icon" href="icon.png">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -110,7 +111,7 @@
                   <h1>Projects</h1>
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <a href="https://klunghamer.github.io/Connect-Four/"><h2 class="section-heading">Connect Four:<br>An Intro into the Front End</h2></a>
+                    <a class="project-link" href="https://klunghamer.github.io/Connect-Four/"><h2 class="section-heading">Connect Four:<br>An Intro into the Front End</h2></a>
                     <p class="lead">HTML & CSS were paired with the technologies of Javascript and jQuery to build my first functioning app!</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
@@ -171,7 +172,7 @@
 
             <div class="row">
                 <div class="col-lg-6">
-                    <h2>Connect with me to learn more:</h2>
+                    <h2 id="contrast">Connect with me to learn more:</h2>
                 </div>
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
@@ -189,7 +190,7 @@
                 </div>
             </div>
 
-        </div> -->
+        </div>
         <!-- /.container -->
 
     </div>
@@ -210,7 +211,7 @@
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#services">Services</a>
+                            <a href="#services">Projects</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
