Add about section

--- a/index.html
+++ b/index.html
@@ -51,10 +51,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
+                        <a href="#home">Home</a>
+                    </li>
+                    <li>
                         <a href="#about">About</a>
                     </li>
                     <li>
-                        <a href="#services">Projects</a>
+                        <a href="#projects">Projects</a>
                     </li>
                     <li>
                         <a href="#contact">Contact</a>
@@ -68,7 +71,7 @@
 
 
     <!-- Header -->
-    <a name="about"></a>
+    <a name="home"></a>
     <div class="intro-header">
         <div class="container">
 
@@ -101,9 +104,29 @@
     <!-- /.intro-header -->
 
     <!-- Page Content -->
+  <a  name="about"></a>
+    <div class="content-section-a">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5  col-lg-offset-1 col-sm-push-6 col-sm-6">
+                  <h1>About Me!</h1>
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <p class="lead">As a web developer, I approach problems with a fresh perspective, pulling information from every available resource in order to improve myself with every challenge. I have a curious energy about programming, which allows me to be resilient and dedicated towards my projects. After graduating from the University of Michigan with a B.S. in Biopsychology, Cognition and Neuroscience, I am excited learn more about all aspects of web development and growing tech field. I am bright-eyed and eager to implement different coding languages into my projects, and always looking to improve my coding skills.</p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                    <a href="https://klunghamer.github.io/Connect-Four/"><img class="img-responsive" src="profpic.jpg" alt=""></a>
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+      </div>
 
 	<a  name="projects"></a>
-    <div class="content-section-a">
+    <div class="content-section-b">
 
         <div class="container">
             <div class="row">
@@ -122,14 +145,13 @@
         </div>
         <!-- /.container -->
 
-        </div>
+    </div>
 
     <!-- <div class="content-section-b">
 
         <div class="container">
-
             <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                <div class="col-lg-5  col-lg-offset-1 col-sm-push-6 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
@@ -203,7 +225,7 @@
                 <div class="col-lg-12">
                     <ul class="list-inline">
                         <li>
-                            <a href="#">Home</a>
+                            <a href="#home">Home</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
@@ -211,14 +233,14 @@
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#services">Projects</a>
+                            <a href="#projects">Projects</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
                             <a href="#contact">Contact</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
+                    <p class="copyright text-muted small">Copyright &copy; Kelly Lunghamer 2016. All Rights Reserved.</p>
                 </div>
             </div>
         </div>
