--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#">Learn more...</a>
+                <a class="navbar-brand topnav" href="#">Kelly Lunghamer</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -115,7 +115,7 @@
                     <div class="clearfix"></div>
                     <p class="lead">As a web developer, I approach problems with a fresh perspective, pulling information from every available resource in order to improve myself with every challenge. I have a curious energy about programming, which allows me to be resilient and dedicated towards my projects. After graduating from the University of Michigan with a B.S. in Biopsychology, Cognition and Neuroscience, I am excited learn more about all aspects of web development and growing tech field. I am bright-eyed and eager to implement different coding languages into my projects, and always looking to improve my coding skills.</p>
                 </div>
-    
+
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <a href="#"><img class="img-responsive kelly" src="profpic.jpg" alt=""></a>
                 </div>
