--- a/index.html
+++ b/index.html
@@ -191,9 +191,6 @@
                     <h2 id="contrast">Connect with me to learn more:</h2>
                 </div>
                 <div class="col-lg-6">
-                    <h4 id="contrast">Email: kelly.lunghamer@gmail.com</h2>
-                </div>
-                <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
                       <li>
                           <a href="https://www.linkedin.com/in/kellylunghamer" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
@@ -206,6 +203,9 @@
                           <a href="https://www.facebook.com/klunghamer" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                       </li>
                     </ul>
+                </div><br>
+                <div class="col-lg-12">
+                    <h4 id="contrast">Email: kelly.lunghamer@gmail.com</h2>
                 </div>
             </div>
 
