--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="custom.css" charset="utf-8">
-    <link rel="icon" href="icon.png">
+    <link rel="icon" href="./pics/icon.png">
 
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -107,7 +107,7 @@
                 </div>
 
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <a href="#"><img class="img-responsive kelly" src="profpic.jpg" alt=""></a>
+                    <a href="#"><img class="img-responsive kelly" src="./pics/profpic.jpg" alt=""></a>
                 </div>
             </div>
 
@@ -128,7 +128,7 @@
                     <p class="lead">This application allows users to login, add photos, and manage their personal closets while giving them the capability to navigate through other users’ closets.<br>TECH: MongoDB, Node.js, Mongoose, Javascript</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <a href="https://customclosets.herokuapp.com/"><img class="img-responsive" src="customclosetspic.png" alt=""></a>
+                    <a href="https://customclosets.herokuapp.com/"><img class="img-responsive" src="./pics/customclosetspic.png" alt=""></a>
                 </div>
             </div>
 
@@ -147,7 +147,7 @@
                     <p class="lead">HTML & CSS were paired with the technologies of Javascript and jQuery to build my first functioning app!</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <a href="https://klunghamer.github.io/Connect-Four/"><img class="img-responsive" src="connectfour.png" alt=""></a>
+                    <a href="https://klunghamer.github.io/Connect-Four/"><img class="img-responsive" src="./pics/connectfour.png" alt=""></a>
                 </div>
             </div>
 
