Added content and resume button

--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
                             <li>
                                 <a href="https://www.facebook.com/klunghamer" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                             </li>
+                            <li>
+                                <a href="https://drive.google.com/file/d/0B0Xym31FXXkZOFNraWttMmpqS2s/view?usp=sharing" class="btn btn-default btn-lg"><i class="fa fa-file-text" aria-hidden="true"></i> <span class="network-name">Resume</span></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -103,7 +106,7 @@
                   <h1>About Me!</h1>
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <p class="lead">As a web developer, I approach problems with a fresh perspective, pulling information from every available resource in order to improve myself with every challenge. I have a curious energy about programming, which allows me to be resilient and dedicated towards my projects. After graduating from the University of Michigan with a B.S. in Biopsychology, Cognition and Neuroscience, I am excited learn more about all aspects of web development and growing tech field. I am bright-eyed and eager to implement different coding languages into my projects, and always looking to improve my coding skills.</p>
+                    <p class="lead">I have a curious energy about programming, and I strive to always improve.  With a background in neuroscience, I know the importance of an open mind and the lessons learned from new challenges. This mindset makes me resilient and dedicated towards my projects, and gives me the tools to produce incredible work. I am a current remote student at General Assembly WDI, and I am very excited to jump-start my web dev career following my graduation in November 2016.</p>
                 </div>
 
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
@@ -125,7 +128,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <a class="project-link" href="https://customclosets.herokuapp.com/"><h2 class="section-heading">Custom Closets</h2></a>
-                    <p class="lead">This application allows users to login, add photos, and manage their personal closets while giving them the capability to navigate through other users’ closets.<br>TECH: MongoDB, Node.js, Mongoose, Javascript</p>
+                    <p class="lead">This application allows users to login, add photos, and manage their personal closets while giving them the capability to navigate through other users’ closets.<br><strong>TECH:</strong> MongoDB, Mongoose, Node.js, Express, Javascript</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <a href="https://customclosets.herokuapp.com/"><img class="img-responsive" src="./pics/customclosetspic.png" alt=""></a>
@@ -144,7 +147,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <a class="project-link" href="https://klunghamer.github.io/Connect-Four/"><h2 class="section-heading">Connect Four:<br>An Intro into the Front End</h2></a>
-                    <p class="lead">HTML & CSS were paired with the technologies of Javascript and jQuery to build my first functioning app!</p>
+                    <p class="lead">HTML & CSS were paired with the technologies of Javascript and jQuery to build my first functioning app!<br><br>This application replicates the original board game, manipulating tokens and annoucing a winner when four tokens are placed in a row.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <a href="https://klunghamer.github.io/Connect-Four/"><img class="img-responsive" src="./pics/connectfour.png" alt=""></a>
@@ -182,12 +185,16 @@
     <div class="banner">
 
         <div class="container">
-
             <div class="row">
-                <div class="col-lg-6">
-                    <h2 id="contrast">Connect with me to learn more:</h2>
-                </div>
-                <div class="col-lg-6">
+              <div class="col-lg-6 col-md-12">
+                  <h2 class="contrast">Connect with me to learn more:</h2>
+              </div>
+              <div class="col-lg-12 col-md-12">
+                  <h4 class="contrast email">Email: kelly.lunghamer@gmail.com</h2>
+              </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-7">
                     <ul class="list-inline banner-social-buttons">
                       <li>
                           <a href="https://www.linkedin.com/in/kellylunghamer" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
@@ -199,11 +206,12 @@
                       <li>
                           <a href="https://www.facebook.com/klunghamer" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                       </li>
+                      <li>
+                          <a href="https://drive.google.com/file/d/0B0Xym31FXXkZOFNraWttMmpqS2s/view?usp=sharing" class="btn btn-default btn-lg"><i class="fa fa-file-text" aria-hidden="true"></i> <span class="network-name">Resume</span></a>
+                      </li>
                     </ul>
-                </div><br>
-                <div class="col-lg-12">
-                    <h4 id="contrast">Email: kelly.lunghamer@gmail.com</h2>
                 </div>
+
             </div>
 
         </div>
