Fixed wanderluster picture

--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-5  col-lg-offset-1 col-sm-push-6 col-sm-6">
+                <div class="col-lg-5 col-sm-6">
                   <h1>Projects</h1>
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <a class="project-link" href="https://wanderluster.herokuapp.com/"><h2 class="section-heading">Wanderluster</h2></a>
                     <p class="lead">While interacting with a weather API, this application lets users find current weather data in cities that they have visited and would like to visit.<br><strong>TECH:</strong> AngularJS, MongoDB, Mongoose, Node.js, Express, API, Materialize</p>
                 </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <a href="https://wanderluster.herokuapp.com/"><img class="img-responsive" src="./pics/wanderluster.png" alt=""></a>
                 </div>
             </div>
