--- a/index.html
+++ b/index.html
@@ -131,10 +131,29 @@
                   <h1>Projects</h1>
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
+                    <a class="project-link" href="https://spaced-out.herokuapp.com/"><h2 class="section-heading">Spaced Out</h2></a>
+                    <p class="lead">This app allows users to dynamically test out fonts and favorites the ones they like.<br><strong>TECH:</strong> Ruby on Rails, PostgreSQL, AngularJS, GoogleFontsAPI, Materialize</p>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <a href="https://spaced-out.herokuapp.com/"><img class="img-responsive" src="./pics/spacedoutpic.png" alt=""></a>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+    <div class="content-section-b">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5  col-lg-offset-1 col-sm-push-6 col-sm-6">
+                  <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
                     <a class="project-link" href="https://wanderluster.herokuapp.com/"><h2 class="section-heading">Wanderluster</h2></a>
                     <p class="lead">While interacting with a weather API, this application lets users find current weather data in cities that they have visited and would like to visit.<br><strong>TECH:</strong> AngularJS, MongoDB, Mongoose, Node.js, Express, API, Materialize</p>
                 </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <a href="https://wanderluster.herokuapp.com/"><img class="img-responsive" src="./pics/wanderluster.png" alt=""></a>
                 </div>
             </div>
